--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>[Dalia] - Website productie 2 - Taken</h1>
     <ul>
-        <li><a href="">Oefening 1</a></li>
+        <li><a href="kleur-popup/index.html">Oefening 1</a></li>
         <li><a href="">Oefening 2</a></li>
         <li><a href="">Oefening 3</a></li>
     </ul>
