--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>[Dalia] - Website productie 2 - Taken</h1>
     <ul>
         <li><a href="kleur-popup/index.html">Oefening 1</a></li>
-        <li><a href="">Oefening 2</a></li>
+        <li><a href="print-list">Oefening 2</a></li>
         <li><a href="">Oefening 3</a></li>
     </ul>
 </body>
