wie ben ik update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="kleur-popup/index.html">Oefening 1</a></li>
         <li><a href="print-list">Oefening 2</a></li>
-        <li><a href="">Oefening 3</a></li>
+        <li><a href="wie-ben-ik/">Oefening 3</a></li>
     </ul>
 </body>
 </html>
