--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <h1>[Dalia] - Website productie 2 - Taken</h1>
     <ul>
-        <li><a href="kleur-popup/index.html">Oefening 1</a></li>
-        <li><a href="print-list">Oefening 2</a></li>
-        <li><a href="wie-ben-ik/">Oefening 3</a></li>
+        <li><a href="kleur-popup/index.html">Oefening popup</a></li>
+        <li><a href="print-list">Oefening lijst</a></li>
+        <li><a href="wie-ben-ik/">Oefening wie ben ik</a></li>
+        <li><a href="wiskunde">Oefening wiskunde</a></li>
     </ul>
 </body>
 </html>
