--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <h1>[Dalia] - Website productie 2 - Taken</h1>
     <ul>
         <li><a href="kleur-popup/index.html">Oefening popup</a></li>
-        <li><a href="print-list">Oefening lijst</a></li>
-        <li><a href="wie-ben-ik/">Oefening wie ben ik</a></li>
-        <li><a href="wiskunde">Oefening wiskunde</a></li>
+        <li><a href="print-list/index.html">Oefening lijst</a></li>
+        <li><a href="wie-ben-ik/index.html">Oefening wie ben ik</a></li>
+        <li><a href="wiskunde/index.html">Oefening wiskunde</a></li>
+        <li><a href="variabel1/index.html"></a>Oefening variabel 1</li>
+        <li><a href=""></a></li>
     </ul>
 </body>
 </html>
