--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="wie-ben-ik/index.html">Oefening wie ben ik</a></li>
         <li><a href="wiskunde/index.html">Oefening wiskunde</a></li>
         <li><a href="variabel1/index.html"></a>Oefening variabel 1</li>
-        <li><a href=""></a></li>
+        <li><a href="variabel2/index.html"></a>Oefening variabel 2</li>
     </ul>
 </body>
 </html>
