--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="wiskunde/index.html">Oefening wiskunde</a></li>
         <li><a href="variabel1/index.html"></a>Oefening variabel 1</li>
         <li><a href="variabel2/index.html"></a>Oefening variabel 2</li>
+        <li><a href="random-floor"></a>Oefening random floor</li>
     </ul>
 </body>
 </html>
