--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <li><a href="print-list/index.html">Oefening lijst</a></li>
         <li><a href="wie-ben-ik/index.html">Oefening wie ben ik</a></li>
         <li><a href="wiskunde/index.html">Oefening wiskunde</a></li>
-        <li><a href="variabel1/index.html"></a>Oefening variabel 1</li>
-        <li><a href="variabel2/index.html"></a>Oefening variabel 2</li>
-        <li><a href="random-floor"></a>Oefening random floor</li>
+        <li><a href="variabel1/index.html">Oefening variabel 1</a></li>
+        <li><a href="variabel2/index.html">Oefening variabel 2</a></li>
+        <li><a href="random-floor">Oefening random floor</a></li>
     </ul>
 </body>
 </html>
