--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="variabel1/index.html">Oefening variabel 1</a></li>
         <li><a href="variabel2/index.html">Oefening variabel 2</a></li>
         <li><a href="random-floor">Oefening random floor</a></li>
+        <li><a href="zwart-wit">Oefening zwart wit</a></li>
     </ul>
 </body>
 </html>
