--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="variabel2/index.html">Oefening variabel 2</a></li>
         <li><a href="random-floor">Oefening random floor</a></li>
         <li><a href="zwart-wit">Oefening zwart wit</a></li>
+        <li><a href="weather">weather</a></li>
     </ul>
 </body>
 </html>
