--- a/portfolio/img.html
+++ b/portfolio/img.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>[Naam] Social</title>
+  <title>[Dalia] Graphics</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
@@ -37,10 +37,8 @@
     </li>
   </ul>
   <hr>
-  <h1>Social media</h1>
-  <p>Welcome to my social media page. I will change this.</p>
-  <!-- links naar social media, je mag hier ook links maken naar profielen die niet van jou zijn als je die liever niet wil delen, zolang de links maar werken-->
-
+  <h1>Graphics</h1>
+  
 </body>
 
 </html>
