--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Homepage</title>
+  <title>Home</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,7 +11,7 @@
   <ul class="menu">
     <li>
       <a href="index.html">
-        Homepage
+        Home
       </a>
     </li>
     <li>
@@ -36,10 +36,12 @@
     </li>
   </ul>
   <hr>
-  <h1>Portfolio of X</h1>
-  <p>Welcome to the portfolio [schrijf je eigen naam hier]</p>
+  <h1>Portfolio of Rizzo Dalia</h1>
+  <p>Welcome to the portfolio [Rizzo Dalia]</p>
   <!-- kleine introductie over jezelf en wat je graag wil doen later (dat hopelijk iets te maken heeft met wat je bij projecten toont)-->
-
+  <p>
+    
+  </p>
   <!--verwijder onderstaand afbeelding-->
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/220px-Yin_yang.svg.png" />
 
