--- a/portfolio/social.html
+++ b/portfolio/social.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>[Naam] Graphics</title>
+  <title>[Dalia] Social</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
@@ -37,8 +37,14 @@
     </li>
   </ul>
   <hr>
-  <h1>Graphics</h1>
-  
+  <h1>Social media</h1>
+  <!-- links naar social media, je mag hier ook links maken naar profielen die niet van jou zijn als je die liever niet wil delen, zolang de links maar werken-->
+  <ul>
+    <li>
+      e-mail: fleurdalia05@hotmail.com
+    </li>
+  </ul>
+
 </body>
 
 </html>
