--- a/portfolio/anim.html
+++ b/portfolio/anim.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>[Naam] Video</title>
+  <title>[Dalia] Video</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,7 +11,7 @@
   <ul class="menu">
     <li>
       <a href="index.html">
-        Homepage
+        Home
       </a>
     </li>
     <li>
