--- a/portfolio/web.html
+++ b/portfolio/web.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>[naam] Web</title>
+    <title>[Dalia] Web</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -38,6 +38,13 @@
     </ul>
     <hr>
     <h1>Website Exercises</h1>
+
+    <ul>
+        <li>
+            <a href="zwart-wit2">Kleuren</a>
+        </li>
+        <li></li>
+    </ul>
 
 </body>
 
