--- a/portfolio/web.html
+++ b/portfolio/web.html
@@ -43,7 +43,9 @@
         <li>
             <a href="zwart-wit2">Kleuren</a>
         </li>
-        <li></li>
+        <li>
+            <a href="design-omzetten">navigatiebar</a>
+        </li>
     </ul>
 
 </body>
