--- a/portfolio/web.html
+++ b/portfolio/web.html
@@ -41,10 +41,13 @@
 
     <ul>
         <li>
-            <a href="zwart-wit2">Kleuren</a>
+            <a href="C:\Users\Cursist\Documents\GitHub\web-2-taken\zwart-wit2\index.html">Kleuren</a>
         </li>
         <li>
-            <a href="design-omzetten">navigatiebar</a>
+            <a href="C:\Users\Cursist\Documents\GitHub\HTML-oefeningen\design-omzetten\index.html">navigatiebar</a>
+        </li>
+        <li>
+            <a href="C:\Users\Cursist\Documents\GitHub\HTML-oefeningen\layout\index.html">layout</a>
         </li>
     </ul>
 
