--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="zwart-wit">Oefening zwart wit</a></li>
         <li><a href="weather">Oefening weather</a></li>
         <li><a href="zwart-wit2">Oefening zwart wit deel 2</a></li>
+        <li><a href="functie">Oefening functie</a></li>
     </ul>
 </body>
 </html>
