--- a/portfolio/anim.html
+++ b/portfolio/anim.html
@@ -37,6 +37,11 @@
   </ul>
   <hr>
   <h1>Video/Animation</h1>
+
+  <video src="B99.mp4" controls></video>
+  <video src="logo.mp4" controls></video>
+  <video src="desk.mp4" controls></video>
+  <video src="lofi.mp4" controls></video>
   
 </body>
 
