--- a/portfolio/img.html
+++ b/portfolio/img.html
@@ -38,6 +38,11 @@
   </ul>
   <hr>
   <h1>Graphics</h1>
+
+      <img src="Owl.png" alt="Owl">
+      <img src="moodboard.jpg" alt="moodboard">
+      <img src="Persona.jpg" alt="persona">
+      <img src="Poster.png" alt="Poster">
   
 </body>
 
