--- a/portfolio/anim.html
+++ b/portfolio/anim.html
@@ -37,11 +37,22 @@
   </ul>
   <hr>
   <h1>Video/Animation</h1>
-
-  <video src="B99.mp4" controls></video>
-  <video src="logo.mp4" controls></video>
-  <video src="desk.mp4" controls></video>
-  <video src="lofi.mp4" controls></video>
+<div class="image">
+  <a href="B99.mp4"><img src="folder.png" alt="Brooklyn 99"></a>
+</div>
+<p class="title">[Brooklyn 99 llama]</p>
+<div class="image">
+  <a href="logo.mp4"><img src="folder.png" alt="logo"></a>
+</div>
+<p class="title">[logo animation]</p>
+<div class="image">
+  <a href="desk.mp4"><img src="folder.png" alt="basis animatie"></a>
+</div>
+<p class="title">[basis animation burau]</p>
+<div class="image">
+  <a href="lofi.mp4"><img src="folder.png" alt="lofi girl"></a>
+</div>
+<p class="title">[lofi girl animation]</p>
   
 </body>
 
