--- a/portfolio/img.html
+++ b/portfolio/img.html
@@ -38,11 +38,23 @@
   </ul>
   <hr>
   <h1>Graphics</h1>
+  <hr>
 
-      <img src="Owl.png" alt="Owl">
-      <img src="moodboard.jpg" alt="moodboard">
-      <img src="Persona.jpg" alt="persona">
-      <img src="Poster.png" alt="Poster">
+  <div class="image">
+    <a href="Owl.png"><img src="folder.png" alt="Owl"></a>
+  </div>
+  <br>
+  <div class="image">
+    <a href="moodboard.jpg"><img src="folder.png" alt="moodboard"></a>  
+  </div>
+  <br>
+  <div class="image">
+    <a href="Persona.jpg"><img src="folder.png" alt="persona"></a>
+  </div>
+  <br>
+  <div class="image">
+    <a href="Poster.png"><img src="folder.png" alt="Poster"></a>
+  </div>
   
 </body>
 
