--- a/portfolio/social.html
+++ b/portfolio/social.html
@@ -41,7 +41,9 @@
   <!-- links naar social media, je mag hier ook links maken naar profielen die niet van jou zijn als je die liever niet wil delen, zolang de links maar werken-->
   <ul>
     <li>
-      e-mail: fleurdalia05@hotmail.com
+      <address>
+        E-mail:<a href="mailto: fleurdalia05@hotmail.com">fleurdalia05@hotmail.com</a>
+      </address>
     </li>
   </ul>
 
