--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="weather">Oefening weather</a></li>
         <li><a href="zwart-wit2">Oefening zwart wit deel 2</a></li>
         <li><a href="functie">Oefening functie</a></li>
+        <li><a href="opdracht-canvasloop">canvasloop</a></li>
     </ul>
 </body>
 </html>
