--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="zwart-wit2">Oefening zwart wit deel 2</a></li>
         <li><a href="functie">Oefening functie</a></li>
         <li><a href="opdracht-canvasloop">canvasloop</a></li>
+        <li><a href="portfolio">portfolio</a></li>
     </ul>
 </body>
 </html>
