--- a/portfolio/img.html
+++ b/portfolio/img.html
@@ -43,18 +43,22 @@
   <div class="image">
     <a href="Owl.png"><img src="folder.png" alt="Owl"></a>
   </div>
+  <p>[Owl]</p>
   <br>
   <div class="image">
     <a href="moodboard.jpg"><img src="folder.png" alt="moodboard"></a>  
   </div>
+  <p>[moodboard]</p>
   <br>
   <div class="image">
     <a href="Persona.jpg"><img src="folder.png" alt="persona"></a>
   </div>
+  <p>[persona]</p>
   <br>
   <div class="image">
     <a href="Poster.png"><img src="folder.png" alt="Poster"></a>
   </div>
+  <p>[poster]</p>
   
 </body>
 
