--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academie Beeldende Kunsten VBilvoorde</title>
+    <title>Academie Beeldende Kunsten Vilvoorde</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <img src="logo.png" alt="logo">  
   <div>
-      <p>menu</p>
-      <p>inschrijvingen</p>
-      <p>goed om te weten</p>
-      <p>ateliers</p>
-      <p>kunsttheorie</p>
-      <p>contact</p>
+      <a href="homepage.html">menu</a>
+      <br>
+      <a href="inschrijvingen.html">inschrijvingen</a>
+      <br>
+      <a href="weetjes.html">goed om te weten</a>
+      <br>
+      <a href="ateliers.html">ateliers</a>
+      <br>
+      <a href="theorie.html">kunsttheorie</a>
+      <br>
+      <a href="contact.html">contact</a>
   </div>
 </body>
 </html>
