--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -20,7 +20,35 @@
         <br>
         <a href="theorie.html">kunsttheorie</a>
         <br>
+        <a href="activiteiten.html">activiteiten</a>
+        <br>
         <a href="contact.html">contact</a>
+    </div>
+    <div>
+        <h1>ateliers</h1>
+        <h3>beeldatelier voor kinderen</h3>
+        <p>
+            Voor wie? graad1 (lj1 en 2); graad2 (lj 3-4-5-6), 2lesuren per week
+            Waar? Spiegelstraat;peutie;houtem;koningslo;kassei
+            Wat? 
+            Wanneer?
+            Wat breng je mee? 
+        </p>
+        <h3>beeldatelier voor jongeren</h3>
+        <p>
+            Voor wie? graad3 (12j-18j), 4lesuren per week
+            Waar? Spiegelstraat
+            Wat?
+            Wanneer?
+            Wat breng je mee?
+        </p>
+        <h3>opleidingen voor volwassenen</h3>
+        <p>
+            
+        </p>
+        <h4>cfg</h4>
+        <p>fgcgb</p>
+        <h4></h4>
     </div>
 </body>
 </html>
