--- a/eindproject-website/contact.html
+++ b/eindproject-website/contact.html
@@ -20,7 +20,18 @@
         <br>
         <a href="theorie.html">kunsttheorie</a>
         <br>
+        <a href="activiteiten.html">activiteiten</a>
+        <br>
         <a href="contact.html">contact</a>
+    </div>
+    <div>
+        <h2>
+            contact
+        </h2>
+        <p>adres en contactgegevens</p>
+        <p>bereikbaarheid</p>
+        <p>ligging</p>
+        <p>openingsuren secretariaat</p>
     </div>
 </body>
 </html>
