--- a/eindproject-website/inschrijvingen.html
+++ b/eindproject-website/inschrijvingen.html
@@ -20,7 +20,18 @@
         <br>
         <a href="theorie.html">kunsttheorie</a>
         <br>
+        <a href="activiteiten.html">activiteiten</a>
+        <br>
         <a href="contact.html">contact</a>
+    </div>
+    <div>
+        <h2>
+            inschrijvingen
+        </h2>
+        <p>lesroosters</p>
+        <p>inschrijftarieven</p>
+        <p>practische info inschrijvingen</p>
+        <p>schrijf in online via mijnacademie.be</p>
     </div>
 </body>
 </html>
