--- a/eindproject-website/theorie.html
+++ b/eindproject-website/theorie.html
@@ -20,7 +20,16 @@
         <br>
         <a href="theorie.html">kunsttheorie</a>
         <br>
+        <a href="activiteiten.html">activiteiten</a>
+        <br>
         <a href="contact.html">contact</a>
+    </div>
+    <div>
+        <h2>
+            kunsttheorie
+        </h2>
+        <p>beeldende en audiovisuele cultuur</p>
+        <p>vrije cursus kunst- en cultuurfilosofie</p>
     </div>
 </body>
 </html>
