--- a/eindproject-website/weetjes.html
+++ b/eindproject-website/weetjes.html
@@ -20,7 +20,17 @@
         <br>
         <a href="theorie.html">kunsttheorie</a>
         <br>
+        <a href="activiteiten.html">activiteiten</a>
+        <br>
         <a href="contact.html">contact</a>
+    </div>
+    <div>
+        <h2>
+            Goed om te weten
+        </h2>
+        <p>sluitingsdagen-vakantieperiodes-pedagogische studiedagen</p>
+        <p>APP</p>
+        <p>aademiereglement</p>
     </div>
 </body>
 </html>
