--- a/eindproject-website/activiteiten.html
+++ b/eindproject-website/activiteiten.html
@@ -24,5 +24,16 @@
       <br>
       <a href="contact.html">contact</a>
   </div>
+  <div>
+    <h1>
+        activiteiten
+    </h1>
+    <h3>aankondigingen</h3>
+    <h3>expos</h3>
+    <h3>excursies</h3>
+    <h3>evenmenten</h3>
+    <h3>nieuws</h3>
+    <h3>persatikels</h3>
+  </div>
 </body>
 </html>
