--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -44,11 +44,33 @@
         </p>
         <h3>opleidingen voor volwassenen</h3>
         <p>
-            
+           graad 4 +18j
+           8 lesuren per week
+           Waar? Spiegelstraat 
         </p>
-        <h4>cfg</h4>
-        <p>fgcgb</p>
-        <h4></h4>
+        <h4>Voor iedereen +18; graad 4</h4>
+        <p>
+            SCHILDERKUNST
+            Wat?
+            (inhoud)
+            Wanneer?
+            Docenten?
+            TEKENKUNST
+            Wat?
+            (inhoud)
+            Wanneer?
+            Docenten?
+            DRUKKUNST EN VRIJE GRAFIEK
+            BEELDHOUWEN EN RUIMTELIJKE KUNST
+        </p>
+        <h4>voor gevorderden +18; specilisatie</h4>
+        <p>
+            (zie above)
+
+            graad 4
+            PROJECTATELIER
+            CROSS OVER
+        </p>
     </div>
 </body>
 </html>
