--- a/eindproject-website/theorie.html
+++ b/eindproject-website/theorie.html
@@ -28,8 +28,20 @@
         <h2>
             kunsttheorie
         </h2>
-        <p>beeldende en audiovisuele cultuur</p>
-        <p>vrije cursus kunst- en cultuurfilosofie</p>
+        <h3>Beeldende en audiovisuele cultuur</h3>
+        <p>
+            Voor wie: +18 jaar 2 keer 4 lesuren per maand
+            Wat?
+            Wanneer?
+            Docenten?
+        </p>
+        <h3>vrije cursus kunst- en cultuurfilosofie</h3>
+        <p>
+            Voor wie: +18 jaar 1 keer 4 lesuren per maand
+            Wat?
+            Wanneer?
+            Docenten?
+        </p>
     </div>
 </body>
 </html>
