--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="logo.png" alt="logo">  
-  <div>
+  <div class="main"></div> 
+    <div class="menu">
+      <img src="logo.png" alt="logo">
       <a href="homepage.html">menu</a>
-      <br>
       <a href="inschrijvingen.html">inschrijvingen</a>
-      <br>
       <a href="weetjes.html">goed om te weten</a>
-      <br>
       <a href="ateliers.html">ateliers</a>
-      <br>
       <a href="theorie.html">kunsttheorie</a>
-      <br>
       <a href="activiteiten.html">activiteiten</a>
-      <br>
       <a href="contact.html">contact</a>
-  </div>
+    </div>
+    <div class="body"></div>
 </body>
 </html>
