--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="main"></div> 
+  <div class="main">
     <div class="menu">
       <img src="logo.png" alt="logo">
-      <a href="homepage.html">menu</a>
-      <a href="inschrijvingen.html">inschrijvingen</a>
-      <a href="weetjes.html">goed om te weten</a>
-      <a href="ateliers.html">ateliers</a>
-      <a href="theorie.html">kunsttheorie</a>
-      <a href="activiteiten.html">activiteiten</a>
-      <a href="contact.html">contact</a>
+      <ul>
+        <li><a href="homepage.html">menu</a></li>
+        <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+        <li><a href="weetjes.html">goed om te weten</a></li>
+        <li><a href="ateliers.html">ateliers</a></li>
+        <li><a href="theorie.html">kunsttheorie</a></li>
+        <li><a href="activiteiten.html">activiteiten</a></li>
+        <li><a href="contact.html">contact</a></li>
+      </ul> 
     </div>
-    <div class="body"></div>
+  </div> 
 </body>
 </html>
