--- a/eindproject-website/contact.html
+++ b/eindproject-website/contact.html
@@ -8,30 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="logo.png" alt="logo">  
     <div>
-        <a href="homepage.html">menu</a>
-        <br>
-        <a href="inschrijvingen.html">inschrijvingen</a>
-        <br>
-        <a href="weetjes.html">goed om te weten</a>
-        <br>
-        <a href="ateliers.html">ateliers</a>
-        <br>
-        <a href="theorie.html">kunsttheorie</a>
-        <br>
-        <a href="activiteiten.html">activiteiten</a>
-        <br>
-        <a href="contact.html">contact</a>
-    </div>
-    <div>
-        <h2>
-            contact
-        </h2>
-        <p>adres en contactgegevens</p>
-        <p>bereikbaarheid</p>
-        <p>ligging</p>
-        <p>openingsuren secretariaat</p>
-    </div>
+        <header class="menu" role="banner">
+            <img src="logo.png" alt="logo">
+            <nav>
+              <ul>
+                <li><a href="homepage.html">menu</a></li>
+                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li><a href="weetjes.html">goed om te weten</a></li>
+                <li><a href="ateliers.html">ateliers</a></li>
+                <li><a href="theorie.html">kunsttheorie</a></li>
+                <li><a href="activiteiten.html">activiteiten</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul> 
+            </nav>
+            </header>
+        </div>
+        <div class="end">
+            <footer>
+                <h2>
+                    contact
+                </h2>
+                <details open>
+                    <summary>
+                        <h4>adres en contactgegevens</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>bereikbaarheid</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>ligging</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>openingsuren secretariaat</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+            </footer>
+        </div>
+   
 </body>
 </html>
