--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -8,19 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="main">
-    <div class="menu">
-      <img src="logo.png" alt="logo">
-      <ul>
-        <li><a href="homepage.html">menu</a></li>
-        <li><a href="inschrijvingen.html">inschrijvingen</a></li>
-        <li><a href="weetjes.html">goed om te weten</a></li>
-        <li><a href="ateliers.html">ateliers</a></li>
-        <li><a href="theorie.html">kunsttheorie</a></li>
-        <li><a href="activiteiten.html">activiteiten</a></li>
-        <li><a href="contact.html">contact</a></li>
-      </ul> 
+  <div>
+    <header class="menu" role="banner">
+        <img src="logo.png" alt="logo">
+        <nav>
+          <ul>
+            <li><a href="homepage.html">menu</a></li>
+            <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+            <li><a href="weetjes.html">goed om te weten</a></li>
+            <li><a href="ateliers.html">ateliers</a></li>
+            <li><a href="theorie.html">kunsttheorie</a></li>
+            <li><a href="activiteiten.html">activiteiten</a></li>
+            <li><a href="contact.html">contact</a></li>
+          </ul> 
+        </nav>
+        </header>
     </div>
-  </div> 
+
 </body>
 </html>
