--- a/eindproject-website/inschrijvingen.html
+++ b/eindproject-website/inschrijvingen.html
@@ -8,30 +8,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="logo.png" alt="logo">  
     <div>
-        <a href="homepage.html">menu</a>
-        <br>
-        <a href="inschrijvingen.html">inschrijvingen</a>
-        <br>
-        <a href="weetjes.html">goed om te weten</a>
-        <br>
-        <a href="ateliers.html">ateliers</a>
-        <br>
-        <a href="theorie.html">kunsttheorie</a>
-        <br>
-        <a href="activiteiten.html">activiteiten</a>
-        <br>
-        <a href="contact.html">contact</a>
+    <header class="menu" role="banner">
+        <img src="logo.png" alt="logo">
+        <nav>
+          <ul>
+            <li><a href="homepage.html">menu</a></li>
+            <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+            <li><a href="weetjes.html">goed om te weten</a></li>
+            <li><a href="ateliers.html">ateliers</a></li>
+            <li><a href="theorie.html">kunsttheorie</a></li>
+            <li><a href="activiteiten.html">activiteiten</a></li>
+            <li><a href="contact.html">contact</a></li>
+          </ul> 
+        </nav>
+        </header>
     </div>
     <div>
-        <h2>
-            inschrijvingen
-        </h2>
-        <p>lesroosters</p>
-        <p>inschrijftarieven</p>
-        <p>practische info inschrijvingen</p>
-        <p>schrijf in online via mijnacademie.be</p>
+        <footer>
+            <h2>
+                inschrijvingen
+            </h2>
+            <details open>
+                <summary>
+                    <h4>lesroosters</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>inschrijftarieven</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>practische info inschrijvingen</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>schrijf in online via mijnacademie.be</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+        </footer>
     </div>
+    
+    
 </body>
 </html>
