--- a/eindproject-website/activiteiten.html
+++ b/eindproject-website/activiteiten.html
@@ -8,32 +8,65 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="logo.png" alt="logo">  
   <div>
-      <a href="homepage.html">menu</a>
-      <br>
-      <a href="inschrijvingen.html">inschrijvingen</a>
-      <br>
-      <a href="weetjes.html">goed om te weten</a>
-      <br>
-      <a href="ateliers.html">ateliers</a>
-      <br>
-      <a href="theorie.html">kunsttheorie</a>
-      <br>
-      <a href="activiteiten.html">activiteiten</a>
-      <br>
-      <a href="contact.html">contact</a>
-  </div>
-  <div>
-    <h1>
-        activiteiten
-    </h1>
-    <h3>aankondigingen</h3>
-    <h3>expos</h3>
-    <h3>excursies</h3>
-    <h3>evenmenten</h3>
-    <h3>nieuws</h3>
-    <h3>persatikels</h3>
-  </div>
+    <header class="menu" role="banner">
+        <img src="logo.png" alt="logo">
+        <nav>
+          <ul>
+            <li><a href="homepage.html">menu</a></li>
+            <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+            <li><a href="weetjes.html">goed om te weten</a></li>
+            <li><a href="ateliers.html">ateliers</a></li>
+            <li><a href="theorie.html">kunsttheorie</a></li>
+            <li><a href="activiteiten.html">activiteiten</a></li>
+            <li><a href="contact.html">contact</a></li>
+          </ul> 
+        </nav>
+        </header>
+    </div>
+    <div class="end">
+        <footer>
+            <h2>
+              activiteiten
+            </h2>
+            <details open>
+                <summary>
+                    <h4>aankondigingen</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>expos</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>excursies</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+                <summary>
+                    <h4>evenmenten</h4>
+                </summary>
+                <p>dfusheufydsu</p>
+            </details>
+            <details open>
+              <summary>
+                  <h4>nieuws</h4>
+              </summary>
+              <p>dfusheufydsu</p>
+          </details>
+          <details open>
+            <summary>
+                <h4>persatikels</h4>
+            </summary>
+            <p>dfusheufydsu</p>
+        </details>
+        </footer>
+    </div>
+  
 </body>
 </html>
