--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -8,69 +8,94 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="logo.png" alt="logo">  
     <div>
-        <a href="homepage.html">menu</a>
-        <br>
-        <a href="inschrijvingen.html">inschrijvingen</a>
-        <br>
-        <a href="weetjes.html">goed om te weten</a>
-        <br>
-        <a href="ateliers.html">ateliers</a>
-        <br>
-        <a href="theorie.html">kunsttheorie</a>
-        <br>
-        <a href="activiteiten.html">activiteiten</a>
-        <br>
-        <a href="contact.html">contact</a>
-    </div>
-    <div>
-        <h1>ateliers</h1>
-        <h3>beeldatelier voor kinderen</h3>
-        <p>
-            Voor wie? graad1 (lj1 en 2); graad2 (lj 3-4-5-6), 2lesuren per week
-            Waar? Spiegelstraat;peutie;houtem;koningslo;kassei
-            Wat? 
-            Wanneer?
-            Wat breng je mee? 
-        </p>
-        <h3>beeldatelier voor jongeren</h3>
-        <p>
-            Voor wie? graad3 (12j-18j), 4lesuren per week
-            Waar? Spiegelstraat
-            Wat?
-            Wanneer?
-            Wat breng je mee?
-        </p>
-        <h3>opleidingen voor volwassenen</h3>
-        <p>
-           graad 4 +18j
-           8 lesuren per week
-           Waar? Spiegelstraat 
-        </p>
-        <h4>Voor iedereen +18; graad 4</h4>
-        <p>
-            SCHILDERKUNST
-            Wat?
-            (inhoud)
-            Wanneer?
-            Docenten?
-            TEKENKUNST
-            Wat?
-            (inhoud)
-            Wanneer?
-            Docenten?
-            DRUKKUNST EN VRIJE GRAFIEK
-            BEELDHOUWEN EN RUIMTELIJKE KUNST
-        </p>
-        <h4>voor gevorderden +18; specilisatie</h4>
-        <p>
-            (zie above)
+        <header class="menu" role="banner">
+            <img src="logo.png" alt="logo">
+            <nav>
+              <ul>
+                <li><a href="homepage.html">menu</a></li>
+                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li><a href="weetjes.html">goed om te weten</a></li>
+                <li><a href="ateliers.html">ateliers</a></li>
+                <li><a href="theorie.html">kunsttheorie</a></li>
+                <li><a href="activiteiten.html">activiteiten</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul> 
+            </nav>
+            </header>
+        </div>
+        <div class="end">
+            <footer>
+                <h2>
+                    ateliers
+                </h2>
+                <details open>
+                    <summary>
+                        <h4>beeldatelier voor kinderen</h4>
+                    </summary>
+                    <p>
+                        Voor wie? graad1 (lj1 en 2); graad2 (lj 3-4-5-6), 2lesuren per week
+                        Waar? Spiegelstraat;peutie;houtem;koningslo;kassei
+                        Wat? 
+                        Wanneer?
+                        Wat breng je mee?
+                    </p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>beeldatelier voor jongeren</h4>
+                    </summary>
+                    <p>
+                        Voor wie? graad3 (12j-18j), 4lesuren per week
+                        Waar? Spiegelstraat
+                        Wat?
+                        Wanneer?
+                        Wat breng je mee?
+                    </p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>opleidingen voor volwassenen</h4>
+                    </summary>
+                    <p>graad 4 +18j
+                        8 lesuren per week
+                        Waar? Spiegelstraat 
+                    </p>
+                    <details open>
+                        <summary>
+                            <h4>Voor iedereen +18; graad 4</h4>
+                        </summary>
+                        <p>
+                            SCHILDERKUNST
+                            Wat?
+                            (inhoud)
+                            Wanneer?
+                            Docenten?
+                            TEKENKUNST
+                            Wat?
+                            (inhoud)
+                            Wanneer?
+                            Docenten?
+                            DRUKKUNST EN VRIJE GRAFIEK
+                            BEELDHOUWEN EN RUIMTELIJKE KUNST
+                        </p>
+                    </details>
+                    <details open>
+                        <summary>
+                            voor gevorderden +18; specilisatie 
+                        </summary>
+                        <p>
+                            (zie above)
 
-            graad 4
-            PROJECTATELIER
-            CROSS OVER
-        </p>
-    </div>
+                            graad 4
+                            PROJECTATELIER
+                            CROSS OVER
+                        </p>
+                    </details>
+                </details>
+                
+            </footer>
+        </div>
+
 </body>
 </html>
