--- a/eindproject-website/theorie.html
+++ b/eindproject-website/theorie.html
@@ -8,40 +8,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="logo.png" alt="logo">  
     <div>
-        <a href="homepage.html">menu</a>
-        <br>
-        <a href="inschrijvingen.html">inschrijvingen</a>
-        <br>
-        <a href="weetjes.html">goed om te weten</a>
-        <br>
-        <a href="ateliers.html">ateliers</a>
-        <br>
-        <a href="theorie.html">kunsttheorie</a>
-        <br>
-        <a href="activiteiten.html">activiteiten</a>
-        <br>
-        <a href="contact.html">contact</a>
-    </div>
-    <div>
-        <h2>
-            kunsttheorie
-        </h2>
-        <h3>Beeldende en audiovisuele cultuur</h3>
-        <p>
-            Voor wie: +18 jaar 2 keer 4 lesuren per maand
-            Wat?
-            Wanneer?
-            Docenten?
-        </p>
-        <h3>vrije cursus kunst- en cultuurfilosofie</h3>
-        <p>
-            Voor wie: +18 jaar 1 keer 4 lesuren per maand
-            Wat?
-            Wanneer?
-            Docenten?
-        </p>
-    </div>
+        <header class="menu" role="banner">
+            <img src="logo.png" alt="logo">
+            <nav>
+              <ul>
+                <li><a href="homepage.html">menu</a></li>
+                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li><a href="weetjes.html">goed om te weten</a></li>
+                <li><a href="ateliers.html">ateliers</a></li>
+                <li><a href="theorie.html">kunsttheorie</a></li>
+                <li><a href="activiteiten.html">activiteiten</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul> 
+            </nav>
+            </header>
+        </div>
+        <div class="end">
+            <footer>
+                <h2>
+                    kunsttheorie
+                </h2>
+                <details open>
+                    <summary>
+                        <h4>Beeldende en audiovisuele cultuur</h4>
+                    </summary>
+                    <p>
+                        Voor wie: +18 jaar 2 keer 4 lesuren per maand
+                        Wat?
+                        Wanneer?
+                        Docenten?
+                    </p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>vrije cursus kunst- en cultuurfilosofie</h4>
+                    </summary>
+                    <p> 
+                        Voor wie: +18 jaar 1 keer 4 lesuren per maand
+                        Wat?
+                        Wanneer?
+                        Docenten?
+                    </p>
+                </details>
+               
+            </footer>
+        </div>
+  
 </body>
 </html>
