--- a/eindproject-website/weetjes.html
+++ b/eindproject-website/weetjes.html
@@ -8,29 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="logo.png" alt="logo">  
     <div>
-        <a href="homepage.html">menu</a>
-        <br>
-        <a href="inschrijvingen.html">inschrijvingen</a>
-        <br>
-        <a href="weetjes.html">goed om te weten</a>
-        <br>
-        <a href="ateliers.html">ateliers</a>
-        <br>
-        <a href="theorie.html">kunsttheorie</a>
-        <br>
-        <a href="activiteiten.html">activiteiten</a>
-        <br>
-        <a href="contact.html">contact</a>
-    </div>
-    <div>
-        <h2>
-            Goed om te weten
-        </h2>
-        <p>sluitingsdagen-vakantieperiodes-pedagogische studiedagen</p>
-        <p>APP</p>
-        <p>aademiereglement</p>
-    </div>
+        <header class="menu" role="banner">
+            <img src="logo.png" alt="logo">
+            <nav>
+              <ul>
+                <li><a href="homepage.html">menu</a></li>
+                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li><a href="weetjes.html">goed om te weten</a></li>
+                <li><a href="ateliers.html">ateliers</a></li>
+                <li><a href="theorie.html">kunsttheorie</a></li>
+                <li><a href="activiteiten.html">activiteiten</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul> 
+            </nav>
+            </header>
+        </div>
+        <div class="end">
+            <footer>
+                <h2>
+                    Goed om te weten
+                </h2>
+                <details open>
+                    <summary>
+                        <h4>sluitingsdagen-vakantieperiodes-pedagogische studiedagen</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>APP</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                <details open>
+                    <summary>
+                        <h4>aademiereglement</h4>
+                    </summary>
+                    <p>dfusheufydsu</p>
+                </details>
+                
+            </footer>
+        </div>
+    
 </body>
 </html>
