--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -13,13 +13,13 @@
             <img src="logo.png" alt="logo">
             <nav>
               <ul>
-                <li><a href="homepage.html">menu</a></li>
-                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
-                <li><a href="weetjes.html">goed om te weten</a></li>
-                <li><a href="ateliers.html">ateliers</a></li>
-                <li><a href="theorie.html">kunsttheorie</a></li>
-                <li><a href="activiteiten.html">activiteiten</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li id="menu"><a href="homepage.html">menu</a></li>
+                <li id="ins"><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li id="wt"><a href="weetjes.html">goed om te weten</a></li>
+                <li id="at"><a href="ateliers.html">ateliers</a></li>
+                <li id="theo"><a href="theorie.html">kunsttheorie</a></li>
+                <li id="act"><a href="activiteiten.html">activiteiten</a></li>
+                <li id="co"><a href="contact.html">contact</a></li>
               </ul> 
             </nav>
             </header>
@@ -29,7 +29,7 @@
                 <h2>
                     ateliers
                 </h2>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>beeldatelier voor kinderen</h4>
                     </summary>
@@ -41,7 +41,7 @@
                         Wat breng je mee?
                     </p>
                 </details>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>beeldatelier voor jongeren</h4>
                     </summary>
@@ -53,7 +53,7 @@
                         Wat breng je mee?
                     </p>
                 </details>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>opleidingen voor volwassenen</h4>
                     </summary>
@@ -61,7 +61,7 @@
                         8 lesuren per week
                         Waar? Spiegelstraat 
                     </p>
-                    <details open>
+                    <details closed>
                         <summary>
                             <h4>Voor iedereen +18; graad 4</h4>
                         </summary>
@@ -80,7 +80,7 @@
                             BEELDHOUWEN EN RUIMTELIJKE KUNST
                         </p>
                     </details>
-                    <details open>
+                    <details closed>
                         <summary>
                             voor gevorderden +18; specilisatie 
                         </summary>
