--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -10,19 +10,28 @@
 <body>
   <div>
     <header class="menu" role="banner">
-        <img src="logo.png" alt="logo">
+        <img id=logo src="logo.png" alt="logo">
         <nav>
           <ul>
-            <li><a href="homepage.html">menu</a></li>
-            <li><a href="inschrijvingen.html">inschrijvingen</a></li>
-            <li><a href="weetjes.html">goed om te weten</a></li>
-            <li><a href="ateliers.html">ateliers</a></li>
-            <li><a href="theorie.html">kunsttheorie</a></li>
-            <li><a href="activiteiten.html">activiteiten</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li id="menu"><a href="homepage.html">menu</a></li>
+            <li id="ins"><a href="inschrijvingen.html">inschrijvingen</a></li>
+            <li id="wt"><a href="weetjes.html">goed om te weten</a></li>
+            <li id="at"><a href="ateliers.html">ateliers</a></li>
+            <li id="theo"><a href="theorie.html">kunsttheorie</a></li>
+            <li id="act"><a href="activiteiten.html">activiteiten</a></li>
+            <li id="co"><a href="contact.html">contact</a></li>
           </ul> 
         </nav>
         </header>
+    </div>
+    <div>
+      <footer>
+        <h1>
+          STEDELIJKE ACADEMIE VOOR BEELDENDE KUNSTEN JAN PORTAELS
+        </h1>
+        <img class="TKI" src="tekenkunst Ingrid.jpg" alt="1">
+        <img class="SP" src="sideprofile.jpg" alt="2">
+      </footer>
     </div>
 
 </body>
