--- a/eindproject-website/weetjes.html
+++ b/eindproject-website/weetjes.html
@@ -13,13 +13,13 @@
             <img src="logo.png" alt="logo">
             <nav>
               <ul>
-                <li><a href="homepage.html">menu</a></li>
-                <li><a href="inschrijvingen.html">inschrijvingen</a></li>
-                <li><a href="weetjes.html">goed om te weten</a></li>
-                <li><a href="ateliers.html">ateliers</a></li>
-                <li><a href="theorie.html">kunsttheorie</a></li>
-                <li><a href="activiteiten.html">activiteiten</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li id="menu"><a href="homepage.html">menu</a></li>
+                <li id="ins"><a href="inschrijvingen.html">inschrijvingen</a></li>
+                <li id="wt"><a href="weetjes.html">goed om te weten</a></li>
+                <li id="at"><a href="ateliers.html">ateliers</a></li>
+                <li id="theo"><a href="theorie.html">kunsttheorie</a></li>
+                <li id="act"><a href="activiteiten.html">activiteiten</a></li>
+                <li id="co"><a href="contact.html">contact</a></li>
               </ul> 
             </nav>
             </header>
@@ -29,19 +29,19 @@
                 <h2>
                     Goed om te weten
                 </h2>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>sluitingsdagen-vakantieperiodes-pedagogische studiedagen</h4>
                     </summary>
                     <p>dfusheufydsu</p>
                 </details>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>APP</h4>
                     </summary>
                     <p>dfusheufydsu</p>
                 </details>
-                <details open>
+                <details closed>
                     <summary>
                         <h4>aademiereglement</h4>
                     </summary>
