--- a/eindproject-website/activiteiten.html
+++ b/eindproject-website/activiteiten.html
@@ -10,7 +10,7 @@
 <body>
   <div>
     <header class="menu" role="banner">
-        <img src="logo.png" alt="logo">
+        <img id=logo src="logo.png" alt="logo">
         <nav>
           <ul>
             <li id="menu"><a href="homepage.html">menu</a></li>
