--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="flex">
           <header class="menu" role="banner">
-            <img id=logo src="logo.png" alt="logo">
+            <img id=logoJP src="LOGOJP.jpg" alt="logoJP">
             <nav>
               <ul>
                 <li ><a href="homepage.html">menu</a></li>
