--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -10,136 +10,18 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="flex">
-      <header class="menu" role="banner">
-        <img id=logo src="logo.png" alt="logo">
-        <nav>
-          <ul>
-            <li><a href="homepage.html">menu</a></li>
-            <li><a href="inschrijvingen.html">inschrijvingen</a></li>
-            <li><a href="weetjes.html">goed om te weten</a></li>
-            <li><a href="ateliers.html">ateliers</a></li>
-            <li><a href="theorie.html">kunsttheorie</a></li>
-            <li><a href="activiteiten.html">activiteiten</a></li>
-            <li><a href="contact.html">contact</a></li>
-          </ul>
-        </nav>
-        <table>
-          <tr>
-            <th>maandag</th>
-            <th>9:00</th>
-            <th>21:30</th>
-          </tr>
-          <tr>
-            <th>dinsdag</th>
-            <th>9:00</th>
-            <th>21:30</th>
-          </tr>
-          <tr>
-            <th>woensdag</th>
-            <th>13:30</th>
-            <th>21:30</th>
-          </tr>
-          <tr>
-            <th>donderdag</th>
-            <th>13:30</th>
-            <th>21:30</th>
-          </tr>
-          <tr>
-            <th>vrijdag</th>
-            <th></th>
-            <th></th>
-          </tr>
-          <tr>
-            <th>zaterdag</th>
-            <th>9:00</th>
-            <th>17:30</th>
-          </tr>
-          <tr>
-            <th>zondag</th>
-            <th>9:00</th>
-            <th>12:30</th>
-          </tr>
-        </table>
-      </header>
-      <aside>
-        <h1>
-          STEDELIJKE ACADEMIE VOOR BEELDENDE KUNSTEN JAN PORTAELS
-        </h1>
-        <img class="TKI" src="tekenkunst Ingrid.jpg" alt="1">
-        <img class="SP" src="sideprofile.jpg" alt="2">
-      </aside>
-    </div>
-    <footer>
-      <h2>Contact</h2>
-      <div class="contact">
-        <div>
-          <h4>adress</h4>
-          <a href="https://www.google.com/maps/place/Stedelijke+academie+voor+beeldende+kunsten+Jan
-          +Portaels/@50.9302534,4.4192109,15z/data=!4m12!1m6!3m5!1s0x0:
-          0xc32a3b1673692407!2sStedelijke+academie+voor+beeldende+kunsten+Jan+Portaels!8m2!3d50.9304967!
-          4d4.4197014!3m4!1s0x0:0xc32a3b1673692407!8m2!3d50.9304967!4d4.4197014">Spiegelstraat 62 – 1800 Vilvoorde</a>
-        </div>
-        <div>
-          <h4>contactgegevens</h4>
-          <p>telefoonnummer 02/251.51.51</p>
-          <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
-          <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
-        </div>
-        <div>
-          <h4>openingsuren secretariaat</h4>
-          <table>
-            <tr>
-              <th></th>
-              <th>van</th>
-              <th>tot</th>
-            </tr>
-            <tr>
-              <th>maandag</th>
-              <th>9:00</th>
-              <th>17:30</th>
-            </tr>
-            <tr>
-              <th>dinsdad</th>
-              <th>9:00</th>
-              <th>18:00</th>
-            </tr>
-            <tr>
-              <th>woensdag</th>
-              <th>13:00</th>
-              <th>19:00</th>
-            </tr>
-            <tr>
-              <th>donderdag</th>
-              <th>13:00</th>
-              <th>17:00</th>
-            </tr>
-            <tr>
-              <th>vrijdag</th>
-              <th></th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>zaterdag</th>
-              <th>9:00</th>
-              <th>14:00</th>
-            </tr>
-            <tr>
-              <th>zondag</th>
-              <th></th>
-              <th></th>
-            </tr>
-          </table>
-        </div>
-      </div>
-      
-    </footer>
-
+  <div class="crossfade">
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+  </div>
+  <div>
 
   </div>
-
-
+  
 </body>
 
 </html>
