--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -7,21 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Academie Beeldende Kunsten Vilvoorde</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
-  <div class="crossfade">
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
+  <div id="backgroundImage"></div>
+  <div class="hide" id="backgroundImage1"></div>
+  <div class="show" id="backgroundImage2"></div>
+  <div class="ovarlay"></div>
+  <div class="infoText">
+    <a href="weetjes.html">goed om te weten</a>
+    <span>COMPANY NAME</span>
   </div>
-  <div>
-
-  </div>
-  
 </body>
 
 </html>
